--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,7 @@ project(sfml-project VERSION 0.1.0)
 # Copy all the required SFML libs and main executable to bin/
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/)
 
-# Build SFML
-add_subdirectory(vendors/sfml/)
+
 
 # Collect all the source and header files
 file(GLOB ALL_SOURCE_FILES src/*.cpp)
@@ -26,7 +25,7 @@ set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17)
 # Include directories for main target
 target_include_directories(
     ${PROJECT_NAME}
-    PRIVATE ${PROJECT_SOURCE_DIR}/include/
+    PRIVATE include
     PRIVATE ${PROJECT_SOURCE_DIR}/vendors/sfml/include/
 )
 
